--- a/Frontend/link-sharer/package.json
+++ b/Frontend/link-sharer/package.json
@@ -16,7 +16,10 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-paper": "^5.14.5",
-    "expo-document-picker": "~13.1.6"
+    "expo-document-picker": "~13.1.6",
+    "expo-media-library": "~17.1.7",
+    "expo-file-system": "~18.1.10",
+    "@expo/vector-icons": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
