--- a/Frontend/link-sharer/package.json
+++ b/Frontend/link-sharer/package.json
@@ -4,25 +4,29 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "axios": "^1.10.0",
     "expo": "~53.0.12",
     "expo-clipboard": "~7.1.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.10",
+    "expo-media-library": "~17.1.7",
+    "expo-notifications": "~0.31.3",
     "expo-status-bar": "~2.2.3",
+    "firebase-admin": "^13.4.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-paper": "^5.14.5",
-    "expo-document-picker": "~13.1.6",
-    "expo-media-library": "~17.1.7",
-    "expo-file-system": "~18.1.10",
-    "@expo/vector-icons": "^14.1.0"
+    "react-native-receive-sharing-intent": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
