--- a/.gitignore
+++ b/.gitignore
@@ -11,19 +11,38 @@ backend/env/
 **/env/
 **/venv/
 
-# === Node (React Native / Expo) ===
-frontend/node_modules/
-frontend/.expo/
-frontend/.expo-shared/
-frontend/.vscode/
-frontend/.env.local
-frontend/dist/
-frontend/build/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# dependencies
+node_modules/
+
+# Expo
 .expo/
+dist/
+web-build/
+expo-env.d.ts
+
+# Native
+.kotlin/
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# Metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+
 
 # === Common ===
 *.DS_Store
