--- a/Frontend/link-sharer/package.json
+++ b/Frontend/link-sharer/package.json
@@ -22,7 +22,8 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-paper": "^5.14.5",
-    "react-native-receive-sharing-intent": "^2.0.0"
+    "react-native-receive-sharing-intent": "^2.0.0",
+    "expo-updates": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
