changing file structure (for the best hopefully)

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,6 +4,6 @@ services:
     env: python
     region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: PYTHONPATH=src gunicorn app:app
+    startCommand: gunicorn app:app
     workingDir: backend
     plan: free
