--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,5 +26,6 @@ COPY . .
 EXPOSE 8080
 
 # Run the app
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--timeout", "120", "app:app"]
+
 
